--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -106,6 +106,16 @@
     // dropdown so it appears below the input
     height: 100%;
     padding: 0 var(--iti-arrow-padding) 0 var(--iti-spacer-horizontal);
+    // reset button styles (can't use all:unset as lose browser default focus outline styles)
+    background: none;
+    border: 0;
+    margin: 0;
+    font-size: inherit;
+    color: inherit;
+    border-radius: 0;
+    font-weight: inherit;
+    line-height: inherit;
+    text-decoration: none;
   }
 
   &__arrow {
@@ -263,7 +273,10 @@
   &--allow-dropdown {
     // hover state - show flag is clickable
     .iti__flag-container:hover {
-      cursor: pointer;
+      // add specificity to override default browser button cursor styling
+      &, & button {
+        cursor: pointer;
+      }
       .iti__selected-flag {
         background-color: var(--iti-hover-color);
       }
